--- a/README.adoc
+++ b/README.adoc
@@ -9,7 +9,7 @@ Andrew Poppe <andrew.poppe@yale.edu>
 ifdef::env-github[]
 :tip-caption: :bulb:
 :note-caption: :information_source:
-:important-caption: :heavy_exclamation_mark:
+:important-caption: :exclamation:
 :caution-caption: :fire:
 :warning-caption: :warning:
 endif::[]
