--- a/README.adoc
+++ b/README.adoc
@@ -174,6 +174,13 @@ SAGs can also be created or edited in bulk by importing a CSV file using the dro
 .SAG dropdown options
 image::cc_sags_actions_2.png[sags actions]
 
+
+When you import SAG definitions, you will have the opportunity to view and confirm any changes.
+
+.Confirmation popup of SAG import
+image::cc_sags_import_confirmation_2.png[sags import confirm]
+
+
 [#sag_import_file_format]
 ==== SAG Import File Format
 
@@ -470,6 +477,8 @@ The file used to import SAGs must be a CSV file with the following columns:
 * `0` - Not allowed
 * `1` - Allowed
 |===
+
+
 
 
 [#user_rights_holders_tab]
