--- a/README.adoc
+++ b/README.adoc
@@ -7,11 +7,12 @@ Andrew Poppe <andrew.poppe@yale.edu>
 :toc:
 :toc-placement!:
 ifdef::env-github[]
-:tip-caption: :bulb:
+
 :note-caption: :information_source:
 :caution-caption: :fire:
 :warning-caption: :warning:
 endif::[]
+:tip-caption: 💡
 :important-caption: 🚩
 
 image:https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&metric=alert_status[link="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"]
