--- a/README.adoc
+++ b/README.adoc
@@ -34,7 +34,7 @@ For example, if your institution requires documentation of training for users to
 In other words, you may want to provide different tiers of training to your users and only allow specific project-level user rights to users who have completed the appropriate training. Although this module does not administer or track training, it does handle eveything else.
 
 *Isn't it the study team's responsibility to manage user rights?*::
-Yes and no. As system administrators, we have the responsibility to ensure users of our system are properly trained for the jobs they'll be doing. Many users do not want to complete an hours-long training if they will only be entering data in a data collection instrument. You can give those users a shorter, focused training and assign them to a SAG that allows minimal user rights.
+Yes and no. *_As system administrators, we have the responsibility to ensure users of our system are adequately trained for the jobs they'll be doing._* Many users do not want to complete an hours-long training if they will only be entering data in a data collection instrument. You can give those users a shorter, focused training and assign them to a SAG that allows minimal user rights.
 
 === How do you use the module?
 
