--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,45 @@ Andrew Poppe <andrew.poppe@yale.edu>
 :important-caption: 🚩
 :warning-caption: ⚠️
 
+++++
+<style>
+@font-face {
+    font-family: "Atkinson Hyperlegible";
+    src: url("fonts/Atkinson-Hyperlegible/WOFF2/Atkinson-Hyperlegible-Regular-102a.woff2") format("woff2"),
+        url("fonts/Atkinson-Hyperlegible/WOFF/Atkinson-Hyperlegible-Regular-102.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Atkinson Hyperlegible";
+    src: url("fonts/Atkinson-Hyperlegible/WOFF2/Atkinson-Hyperlegible-Bold-102a.woff2") format("woff2"),
+        url("fonts/Atkinson-Hyperlegible/WOFF/Atkinson-Hyperlegible-Bold-102.woff") format("woff");
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Atkinson Hyperlegible";
+    src: url("fonts/Atkinson-Hyperlegible/WOFF2/Atkinson-Hyperlegible-Italic-102a.woff2") format("woff2"),
+        url("fonts/Atkinson-Hyperlegible/WOFF/Atkinson-Hyperlegible-Italic-102.woff") format("woff");
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Atkinson Hyperlegible";
+    src: url("fonts/Atkinson-Hyperlegible/WOFF2/Atkinson-Hyperlegible-BoldItalic-102a.woff2") format("woff2"),
+        url("fonts/Atkinson-Hyperlegible/WOFF/Atkinson-Hyperlegible-BoldItalic-102.woff") format("woff");
+    font-weight: bold;
+    font-style: italic;
+}
+body {
+    font-family: "Atkinson Hyperlegible";
+}
+</style>
+++++
+
 image:https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&metric=alert_status[link="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"]
 
 toc::[]
