--- a/README.adoc
+++ b/README.adoc
@@ -12,6 +12,7 @@ Andrew Poppe <andrew.poppe@yale.edu>
 :important-caption: 🚩
 :warning-caption: ⚠️
 
+ifndef::env-github[]
 ++++
 <style>
 @font-face {
@@ -50,6 +51,7 @@ body {
 }
 </style>
 ++++
+endif::[]
 
 image:https://sonarcloud.io/api/project_badges/measure?project=AndrewPoppe_Security-Access-Groups&metric=alert_status[link="https://sonarcloud.io/summary/new_code?id=AndrewPoppe_Security-Access-Groups"]
 
