--- a/README.adoc
+++ b/README.adoc
@@ -3,7 +3,7 @@ Andrew Poppe <andrew.poppe@yale.edu>
 :description: This is an External Module for REDCap that allows admins to create and manage Security Access Groups that restrict which User Rights a user may be granted.
 :imagesdir: docs/images
 :sectlinks: true
-:table-stripes: odd
+:table-stripes: even
 :toc:
 :toc-placement!:
 :caution-caption: 🔥
