--- a/lang/English.ini
+++ b/lang/English.ini
@@ -35,3 +35,6 @@ bad_role_import_2 = "The following roles have users assigned to them, and the fo
 ; Role Assignment Import (CSV)
 bad_role_assigment_import_1 = "You cannot assign those users to those roles."
 bad_role_assigment_import_2 = "The following permissions cannot be granted for the following users due to their current SAG assignment"
+
+; Rights
+data_quality_open = "Open Queries"
