End user facing translations done

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -3,6 +3,10 @@
 ; User Right Page - Popup Notifications for Users ;
 ; ----------------------------------------------- ;
 
+; Module
+module_name = "Security Access Groups"
+module_description = "Create and manage Security Access Groups, which define at the system level the set of allowable user rights a REDCap user is able to be granted in a project"
+
 ; General
 ok = "OK"
 user = "User"
@@ -36,5 +40,3 @@ bad_role_import_2 = "The following roles have users assigned to them, and the fo
 bad_role_assigment_import_1 = "You cannot assign those users to those roles."
 bad_role_assigment_import_2 = "The following permissions cannot be granted for the following users due to their current SAG assignment"
 
-; Rights
-data_quality_open = "Open Queries"
