--- a/lang/Français.ini
+++ b/lang/Français.ini
@@ -1,9 +1,14 @@
+; French
+; Security Access Groups: Groupes d'accès à la sécurité
+; Note: The English abbreviation "SAG" is replaced by "GAS" for the French translation.
 
 ; ----------------------------------------------- ;
 ; User Right Page - Popup Notifications for Users ;
 ; ----------------------------------------------- ;
 
-; Note: The English abbreviation "SAG" is replaced by "GAS" for the French translation.
+; Module
+module_name = "Groupes d'accès à la sécurité"
+module_description = "Créer et gérer des groupes d'accès de sécurité, qui définissent au niveau du système l'ensemble des droits d'utilisateur autorisés qu'un utilisateur de REDCap peut se voir accorder dans un projet."
 
 ; General
 ok = "OK"
