start on project status page

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -1,7 +1,5 @@
 
-; ----------------------------------------------- ;
-; User Right Page - Popup Notifications for Users ;
-; ----------------------------------------------- ;
+
 
 ; Module
 module_name = "Security Access Groups"
@@ -14,6 +12,10 @@ sag = "SAG"
 user_role = "User Role"
 permissions_1 = "Permissions"
 error_1 = "Something went wrong."
+
+; ----------------------------------------------- ;
+; User Right Page - Popup Notifications for Users ;
+; ----------------------------------------------- ;
 
 ; User Rights
 bad_user_1 = "You cannot grant those user rights to user \"{0}\""
@@ -40,3 +42,240 @@ bad_role_import_2 = "The following roles have users assigned to them, and the fo
 bad_role_assigment_import_1 = "You cannot assign those users to those roles."
 bad_role_assigment_import_2 = "The following permissions cannot be granted for the following users due to their current SAG assignment"
 
+; ------------------- ;
+; Project Status Page ;
+; ------------------- ;
+
+status_ui_1 = "Alerts and Actions"
+status_ui_2 = "Project Status"
+status_ui_3 = "Introduction"
+status_ui_4 = "If there are users in this project with non-compliant rights (i.e., user rights that are
+                disallowed by their currently-assigned SAG), then there are several options that can be
+                taken from this page."
+status_ui_5 = "To take an action, you first have to select one or more users using the checkboxes in the table."
+status_ui_6 = "The available actions that can be taken are listed here and explained more fully below:"
+status_ui_7 = "Alert Project Users"
+status_ui_8 = "Alert Project User Rights Holders"
+status_ui_9 = "Expire Project Users"
+status_ui_10 = "This lets the user(s) know that their own user rights are currently not in compliance with their 
+                assigned SAG. There is also the option to schedule a reminder alert after a period of time."
+status_ui_11 = "This alert is sent to one or more users in the project who have the permission to change user rights. 
+                There is also the option to schedule a reminder alert after a period of time."
+status_ui_12 = "Set the expiration date of the user in this project. Alerts can be sent to the users and/or user rights 
+                holders when the expiration is scheduled."
+status_ui_13 = "This lets the user(s) know that their own user rights are currently not in compliance with their 
+                assigned SAG. The options for the alert itself are similar to other alerts in REDCap:"
+status_ui_14 = "Option"
+status_ui_15 = "Required"
+status_ui_16 = "Description"
+status_ui_17 = "From address"
+status_ui_18 = "This is the email address that the alert will come from."
+status_ui_19 = "Optional"
+status_ui_20 = "Display Name"
+status_ui_21 = "Subject"
+status_ui_22 = "Body"
+status_ui_23 = "Placeholders"
+status_ui_24 = "Reminder"
+status_ui_25 = "This is the subject of the alert email. You can use placeholders and/or smart variables in the subject 
+                (see below)."
+status_ui_26 = "This is some formatted text that will make up the body of the email. You can use placeholders and/or 
+                smart variables in the body (see below)."
+status_ui_27 = "These are text strings that will be replaced with the actual values when the email is sent. A 
+                description of the available placeholders appears in the Alert Project Users popup."
+status_ui_28 = "The option exists to schedule a reminder to be sent after a defined period of days. Aside from the 
+                number of days, the reminder is configured in the same way as the initial alert."
+status_ui_29 = "The display name that will appear next to the From address in the alert email"
+status_ui_30 = "N/A"
+status_ui_31 = "This alert is sent to one or more users in the project who have the permission to change user rights. 
+                The recipient(s) are selected from a list of all user rights holders in the project."
+status_ui_32 = "Be sure to verify that the intended recipients are in compliance with their own SAG to prevent confusion."
+status_ui_33 = "Also, note that only one alert will be sent to each user rights holder, so use placeholders to specify 
+                which project users the alert is regarding."
+status_ui_34 = "The options for setting up this alert are nearly identical with the Project Users Alert, described 
+                above. One difference is that the placeholders are different, given the possibility that the alert 
+                refers to multiple users."
+status_ui_35 = "Recipients"
+status_ui_36 = "Select at least one recipient for this alert from the table of users that have User Rights permissions 
+                in this project."
+status_ui_37 = "This allows an admin to expire the selected user or users in the project either immediately or after a 
+                designated number of days"
+status_ui_38 = "Users will have their expiration date set in the project based on this selection"
+status_ui_39 = "An alert can be sent to the user(s) to notify them of the expiration"
+status_ui_40 = "The options for this alert are identical with those described in the Alert Project Users section above, 
+                with the exception that no reminder is available to be scheduled"
+status_ui_41 = "An alert can be sent to project user rights holders to notify them of the expiration"
+status_ui_42 = "The options for this alert are identical with those described in the Alert Project User Rights Holders 
+                section above, with the exception that no reminder is available to be scheduled"
+status_ui_43 = "<strong>Note:</strong> these alerts are sent immediately regardless of when the expiration is scheduled for."
+status_ui_44 = "Security Access Groups (SAGs) are used to restrict which user rights a REDCap user can be granted in a 
+                project. SAGs do not define the rights a user will have in a given project; rather, they define the set 
+                of allowable rights the user is able to be granted. SAGs are defined at the system level and are used in
+                any project that has this module enabled."
+status_ui_45 = "Alert Log"
+status_ui_46 = "Use this page to identify which users currently have user rights assigned to them that do not comply 
+                with their assigned SAG. This situation can arise"
+status_ui_47 = "when the SAG module is first enabled in a project that already has users added to it"
+status_ui_48 = "when a user's SAG assignment is changed"
+status_ui_49 = "Actions can be taken to correct these situations. Click the"
+status_ui_50 = "button below for more information."
+status_ui_51 = ""
+status_ui_52 = ""
+status_ui_53 = ""
+status_ui_54 = ""
+status_ui_55 = ""
+status_ui_56 = ""
+status_ui_57 = ""
+status_ui_58 = ""
+status_ui_59 = ""
+status_ui_60 = ""
+status_ui_61 = ""
+status_ui_62 = ""
+status_ui_63 = ""
+status_ui_64 = ""
+status_ui_65 = ""
+status_ui_66 = ""
+status_ui_67 = ""
+status_ui_68 = ""
+status_ui_69 = ""
+status_ui_70 = ""
+status_ui_71 = ""
+status_ui_72 = ""
+status_ui_73 = ""
+status_ui_74 = ""
+status_ui_75 = ""
+status_ui_76 = ""
+status_ui_77 = ""
+status_ui_78 = ""
+status_ui_79 = ""
+status_ui_80 = ""
+status_ui_81 = ""
+status_ui_82 = ""
+status_ui_83 = ""
+status_ui_84 = ""
+status_ui_85 = ""
+status_ui_86 = ""
+status_ui_87 = ""
+status_ui_88 = ""
+status_ui_89 = ""
+status_ui_90 = ""
+status_ui_91 = ""
+status_ui_92 = ""
+status_ui_93 = ""
+status_ui_94 = ""
+status_ui_95 = ""
+status_ui_96 = ""
+status_ui_97 = ""
+status_ui_98 = ""
+status_ui_99 = ""
+status_ui_100 = ""
+status_ui_101 = ""
+status_ui_102 = ""
+status_ui_103 = ""
+status_ui_104 = ""
+status_ui_105 = ""
+status_ui_106 = ""
+status_ui_107 = ""
+status_ui_108 = ""
+status_ui_109 = ""
+status_ui_110 = ""
+status_ui_111 = ""
+status_ui_112 = ""
+status_ui_113 = ""
+status_ui_114 = ""
+status_ui_115 = ""
+status_ui_116 = ""
+status_ui_117 = ""
+status_ui_118 = ""
+status_ui_119 = ""
+status_ui_120 = ""
+status_ui_121 = ""
+status_ui_122 = ""
+status_ui_123 = ""
+status_ui_124 = ""
+status_ui_125 = ""
+status_ui_126 = ""
+status_ui_127 = ""
+status_ui_128 = ""
+status_ui_129 = ""
+status_ui_130 = ""
+status_ui_131 = ""
+status_ui_132 = ""
+status_ui_133 = ""
+status_ui_134 = ""
+status_ui_135 = ""
+status_ui_136 = ""
+status_ui_137 = ""
+status_ui_138 = ""
+status_ui_139 = ""
+status_ui_140 = ""
+status_ui_141 = ""
+status_ui_142 = ""
+status_ui_143 = ""
+status_ui_144 = ""
+status_ui_145 = ""
+status_ui_146 = ""
+status_ui_147 = ""
+status_ui_148 = ""
+status_ui_149 = ""
+status_ui_150 = ""
+status_ui_151 = ""
+status_ui_152 = ""
+status_ui_153 = ""
+status_ui_154 = ""
+status_ui_155 = ""
+status_ui_156 = ""
+status_ui_157 = ""
+status_ui_158 = ""
+status_ui_159 = ""
+status_ui_160 = ""
+status_ui_161 = ""
+status_ui_162 = ""
+status_ui_163 = ""
+status_ui_164 = ""
+status_ui_165 = ""
+status_ui_166 = ""
+status_ui_167 = ""
+status_ui_168 = ""
+status_ui_169 = ""
+status_ui_170 = ""
+status_ui_171 = ""
+status_ui_172 = ""
+status_ui_173 = ""
+status_ui_174 = ""
+status_ui_175 = ""
+status_ui_176 = ""
+status_ui_177 = ""
+status_ui_178 = ""
+status_ui_179 = ""
+status_ui_180 = ""
+status_ui_181 = ""
+status_ui_182 = ""
+status_ui_183 = ""
+status_ui_184 = ""
+status_ui_185 = ""
+status_ui_186 = ""
+status_ui_187 = ""
+status_ui_188 = ""
+status_ui_189 = ""
+status_ui_190 = ""
+status_ui_191 = ""
+status_ui_192 = ""
+status_ui_193 = ""
+status_ui_194 = ""
+status_ui_195 = ""
+status_ui_196 = ""
+status_ui_197 = ""
+status_ui_198 = ""
+status_ui_199 = ""
+status_ui_200 = ""
+status_ui_201 = ""
+status_ui_202 = ""
+status_ui_203 = ""
+status_ui_204 = ""
+status_ui_205 = ""
+status_ui_206 = ""
+status_ui_207 = ""
+status_ui_208 = ""
+status_ui_209 = ""
+status_ui_210 = ""
+status_ui_211 = ""
